# control-orogen-skid4_control

./: CMakeLists.txt  ControllerTypes.hpp  Robot.hpp  control.orogen  manifest.xml  skid4_control.orogen
scripts/: test_pivcontroller
tasks/: CMakeLists.txt  ConstantSpeedController.cpp  ConstantSpeedController.hpp  Controller.cpp  Controller.hpp  FourWheelController.cpp  FourWheelController.hpp  PIV.cpp  PIV.hpp  PIVController.cpp  PIVController.hpp  RK4_Integrator.cpp  SafeController.cpp  SafeController.hpp  SimpleController.cpp  SimpleController.hpp  SimpleIntegrator.hpp  SoftTurnController.cpp  SoftTurnController.hpp  TwoPhaseController.cpp  TwoPhaseController.hpp  VariableSpeedController.cpp  VariableSpeedController.hpp
