include(controlTaskLib)
ADD_LIBRARY(${CONTROL_TASKLIB_NAME} SHARED 
    ${CONTROL_TASKLIB_SOURCES})

add_dependencies(${CONTROL_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${CONTROL_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CONTROL_TASKLIB_DEPENDENT_LIBRARIES}
    libmotor_controller.so )
SET_TARGET_PROPERTIES(${CONTROL_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CONTROL_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CONTROL_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CONTROL_TASKLIB_HEADERS} 
    DESTINATION include/orocos/control)

